--- a/templates/publish.html
+++ b/templates/publish.html
@@ -1,8 +1,9 @@
+{% import "macros.html" as macros %}
 <!DOCTYPE html>
 <html>
   <head><title>create post</title></head>
   <body>
-    <form id="theform" method="POST" action="{{ action }}publish">
+    <form id="theform" method="POST">
       <input type="text" id="filename" name="filename" placeholder="FILENAME"></input>
       <input type="text" id="note" name="note" placeholder="revision note"></input>
       <button id="submit">submit</button>
@@ -11,15 +12,21 @@
 title = ""
 description = ""
 date = DATE_REPLACEME
-+++</textarea>
++++
+</textarea>
     </form>
-    {{ draftwidget }}
+    {{ macros::draftwidget(textarea_id="textarea", cookie_name="edit_draft") }}
+    {{ macros::form_result(form_id="theform", submit_id="submit") }}
+    {{ macros::content_size_text_area(text_area_id="textarea") }}
     <script>
       let theTextArea = document.getElementById("textarea");
       let now = new Date();
       let month = now.getMonth() + 1;
       let monthstr = month < 10 ? "0" + month : new String(month);
-      theTextArea.value = theTextArea.value.replace("DATE_REPLACEME", new String(now.getFullYear()) + "-" + monthstr + "-" + now.getDate());
+      theTextArea.value = theTextArea.value.replace(
+        "DATE_REPLACEME",
+        new String(now.getFullYear()) + "-" + monthstr + "-" + now.getDate()
+      );
     </script>
   </body>
 </html>
